can successfully seed a thought and get it in insomnia

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AS A social media startup I WANT an API for my social network that uses a NoSQL database SO THAT my website can handle large amounts of unstructured data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node utils/seed"
   },
   "repository": {
     "type": "git",
